adjusted list box issue where it is squished when making the screen smaller. removed it altogether. need to adjust medium and small queries and height on medium to small devices.

--- a/app/assets/styles/base/_mixins.scss
+++ b/app/assets/styles/base/_mixins.scss
@@ -5,13 +5,13 @@
 }
 
 @mixin bp-medium {
-  @media only screen and (max-width: 784px ){
+  @media only screen and (max-width: 860px ){
     @content;
   }
 }
 
 @mixin bp-small {
-  @media only screen and (max-width: 635px ){
+  @media only screen and (max-width: 616px ){
     @content;
   }
 }
