--- a/app/assets/styles/modules/_list-container.scss
+++ b/app/assets/styles/modules/_list-container.scss
@@ -7,4 +7,9 @@
   @include bp-large {
     width: 19%;
   }
+
+   @include bp-small {
+    //list box gets squished here. 
+     display: none;
+  }
 }
