--- a/app/assets/styles/modules/_picture-frame.scss
+++ b/app/assets/styles/modules/_picture-frame.scss
@@ -7,6 +7,17 @@
   max-height: 100px;
 
 
+  @include bp-medium  {
+    width: 60%;
+    height: 60%;
+    margin-bottom: 13px;
+  }
+
+  @include bp-medium  {
+    width: 60%;
+    height: 60%;
+    margin-bottom: 13px;
+  }
 
   img {
     border-radius: 10px;
@@ -22,6 +33,7 @@
       @include bp-medium  {
         width: 60%;
         height: 60%;
+        margin-top: 13px;
       }
       //
       //
